# DevCleaner

./: .gitignore  .ignore  README.md  pyproject.toml
src/venvhunter/: __init__.py  app.py  models.py  settings.py
src/venvhunter/services/: __init__.py  deletion.py  exporter.py  scanner.py
src/venvhunter/ui/: __init__.py  animations.py  main_window.py  theme.py  widgets.py  workers.py
src/venvhunter/utils/: formatting.py  platform.py
tests/: test_deletion.py  test_scanner.py  test_ui.py
